TestApp1/TestApp1/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp1
  namespace: tenant1
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: $2
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: direct-marketing-local.harley-davidsondigital.com
    http:
      paths:
      - pathType: Prefix 
        #path: "/api"
        path: /api
        backend:
          service:
            name: testapp1
            port:
              number: 80
      - pathType: Prefix 
        #path: "/api"
        path: "/swagger"
        backend:
          service:
            name: testapp1
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: testapp1
            port: 
              number: 80
